--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-amplify": "^5.0.8",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
