--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
